--- a/src/main/webapp/NewsSite.html
+++ b/src/main/webapp/NewsSite.html
@@ -12,7 +12,7 @@
     <!--                                                               -->
     <!-- Consider inlining CSS to reduce the number of requested files -->
     <!--                                                               -->
-    <link type="text/css" rel="stylesheet" href="com.enformable.css">
+    <link type="text/css" rel="stylesheet" href="NewsSite.css">
 
     <!--                                           -->
     <!-- Any title is fine                         -->
@@ -24,7 +24,7 @@
     <!-- If you add any GWT meta tags, they must   -->
     <!-- be added before this line.                -->
     <!--                                           -->
-    <script type="text/javascript" language="javascript" src="com.enformable/com.enformable.nocache.js"></script>
+    <script type="text/javascript" language="javascript" src="NewsSite/NewsSite.nocache.js"></script>
   </head>
 
   <!--                                           -->
