--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,7 +12,7 @@
     <!--                                                               -->
     <!-- Consider inlining CSS to reduce the number of requested files -->
     <!--                                                               -->
-    <link type="text/css" rel="stylesheet" href="NewsSite.css">
+    <!--<link type="text/css" rel="stylesheet" href="NewsSite.css">-->
 
     <!--                                           -->
     <!-- Any title is fine                         -->
@@ -44,7 +44,7 @@
         in order for this application to display correctly.
       </div>
     </noscript>
-
+<!--
     <h1>Web Application Starter Project</h1>
 
     <table align="center">
@@ -58,6 +58,6 @@
       <tr>
         <td colspan="2" style="color:red;" id="errorLabelContainer"></td>
       </tr>
-    </table>
+    </table>-->
   </body>
 </html>
