more files involved in UI impl

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
      <script type="text/javascript" language="javascript" src="NewsSite/NewsSite.nocache.js"></script>
+     <LINK REL=StyleSheet HREF="NewsSite/NewsSite.css" TYPE="text/css"/>
   </head>
 
   <body>
